# py-starter

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yaml
apps/api/: pyproject.toml
apps/api/api/: __init__.py  main.py
apps/api/tests/: api_test.py
apps/hello_world/: pyproject.toml
apps/hello_world/hello_world/: __init__.py  hello.py
apps/hello_world/tests/: hello_test.py
apps/ui/: pyproject.toml
apps/ui/ui/: __init__.py  manage.py
apps/ui/ui/mysite/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
hello_world/: pyproject.toml
hello_world/src/: hello.py
hello_world/src/test/: hello_test.py
