[project]
description = "Add your description here"
name = "py-starter"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.uv.workspace]
members = [
  "apps/*",
]

[dependency-groups]
dev = [
  "poethepoet",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "ruff",
]

[tool.poe.tasks]
_c = "rm -rf .venv .pytest_cache .ruff_cache **/*.egg-info dist"
_i = "uv run pre-commit install"
"api:dev" = "uv run --directory=apps/api --package=api fastapi dev api/main.py --port 8001"
b = "uv build"
c = [
  {ref = "_c"},
  {cmd = "uv clean"},
]
i = [
  {ref = "_i"},
  {cmd = "uv sync --all-groups --all-packages --all-extras --frozen"},
]
l = "uv run ruff check"
t = "uv run pytest --cov --pdb"
u = "uv sync --upgrade"
"ui:dev" = "uv run --directory=apps/ui --package=ui python ui/manage.py runserver 8000"
"ui:migrate" = "uv run --directory=apps/ui --package=ui python ui/manage.py migrate"

[tool.ruff]
fix = true
preview = true
required-version = ">=0.8.6"
show-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "D203", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "CPY001", # `missing-copyright-notice` (CPY001) not applicable to all files
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 4

[tool.ruff.format]
docstring-code-format = true

[tool.pytest]
capture = "yes"
django_debug_mode = true

[tool.coverage.run]
branch = true
omit = [
  "**/tests/**/*",
  "apps/ui/**/*", # TODO: test the ui too
]
source = ["apps/api", "apps/ui"]

[tool.coverage.report]
fail_under = 100
show_missing = true
