[project]
description = "Add your description here"
name = "py-starter"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.uv.workspace]
members = [
  "apps/*",
]

[dependency-groups]
dev = [
  "poethepoet>=0.32.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.8.6",
]

[tool.poe.tasks]
_c = "rm -rf .venv .pytest_cache .ruff_cache **/*.egg-info dist"
_i = "uv run pre-commit install"
b = "uv build"
c = [
  {ref = "_c"},
  {cmd = "uv clean"},
]
i = [
  {ref = "_i"},
  {cmd = "uv sync --all-groups --all-packages --all-extras --frozen"},
]
l = "uv run ruff check"
t = "uv run pytest --cov --doctest-modules --pdb"
u = "uv sync --upgrade"

[tool.ruff]
fix = true
preview = true
required-version = ">=0.8.6"
show-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "D203", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "CPY001", # `missing-copyright-notice` (CPY001) not applicable to all files
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 4

[tool.ruff.format]
docstring-code-format = true

[tool.pytest]
capture = "yes"

[tool.coverage.run]
branch = true
omit = ["**/tests/*"]
source = ["apps/hello_world"]

[tool.coverage.report]
fail_under = 100
show_missing = true
