[project]
dependencies = [
  "fastapi[standard]",
]
description = "Add your description here"
name = "api"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = [
  "httpx",
]
