[project]
description = "Add your description here"
name = "hello_world"
requires-python = ">=3.13"
version = "0.1.0"

[project.scripts]
hello = "hello_world.hello:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["hello_world"]
