[project]
dependencies = [
  "Django",
]
description = "Add your description here"
name = "ui"
requires-python = ">=3.13.1"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["ui"]

[dependency-groups]
dev = [
  "pytest-django",
]
